docs(users): add 404 to follow route
