# docs/swagger.yaml
@@ -619,6 +619,10 @@ paths:
           description: Unauthorized
           schema:
             $ref: '#/definitions/dto.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/dto.HTTPError'
         "409":
           description: Conflict
           schema:
